# intelligent-task-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_connection.py  test_refactored_system.py  test_task_monitor_fix.py
deployment/: deploy.py
intelligent_task/: __init__.py  agent.py  prompt.py
intelligent_task/shared_libraries/: __init__.py  complexity_analyzer.py  warning_config.py
intelligent_task/sub_agents/: __init__.py
intelligent_task/sub_agents/task_decomposer/: __init__.py  agent.py  prompt.py
intelligent_task/sub_agents/task_executor/: __init__.py  agent.py  prompt.py
intelligent_task/sub_agents/task_monitor/: __init__.py  agent.py  prompt.py
